--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="header-items">
             <ul>
-                <li><a>Conteúdo</a></li>
-                <li><a>Colaborativa</a></li>
-                <li><a>Híbrida</a></li>
+                <li><a href="#">Conteúdo</a></li>
+                <li><a href="#">Colaborativa</a></li>
+                <li><a href="#">Híbrida</a></li>
             </ul>
         </div>
-        <div>
-            <h1>CineMind</h1>
+        <div class="header-title">
+            <h1><a>CineMind</a></h1>
         </div>
     </header>
     
     <main>
-        <div>
+        <div class="main-text-introdution">
             <h3>Insira suas preferências:</h3>            
         </div>
-        <div>
+        <div class="main-recommendation-form">
             <form id="recommendationForm">
-                <label>Gênero:</label>
+                <label>Gênero:</label></form>
                 <select name="generos" form="recommendationForm" required="required">
                     <option value="acao">Ação</option>
                     <option value="romance">Romance</option>
